<resources>
    <string name="app_name">Android biosignals</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BiTronics mobile biosignals</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="notifyTitle">Prompt</string>
    <string name="gpsNotifyMsg">Current mobile phone scanning Bluetooth needs to open the positioning function</string>
    <string name="setting">Go to settings</string>
    <string name="cancel">Cancel</string>
    <string name="aboutApplication">Android biosignals - приложение, предназначенное для визуализации биоэлектрических сигналов на платформе Android</string>
    <string name="stringHome">Домашняя страница</string>

    <string name="eegMenu">Активность мозга</string>
    <string name="emgMenu">Мышечная активность</string>
    <string name="onBluetooth">Начать работу</string>
    <string name="name_device">Name device</string>
    <string name="address_device">Address device</string>
    <string name="connecting">Подключение</string>
    <string name="startSearch">Начать поиск</string>
    <string name="textPairedDevices">Список сопряженных устройств</string>
    <string name="StartSearch">Начать поиск</string>
    <string name="unnamed_device">Unnamed</string>
    <string name="device_control">Управление устройством</string>
    <string name="find_devices">Найденные устройства</string>
    <string name="find_device_description">Среди доступных устройств выберите BiTronics LU</string>
    <string name="disconnect">Отключиться</string>
    <string name="connected">Подключено</string>
    <string name="device">Устройство</string>
    <string name="our_contacts">Наши контакты:</string>
    <string name="string_email">densof161922@gmail.com</string>
    <string name="fondHelpInnovation">Разработано при поддержке</string>
    <string name="fondHelpInnovation2">Фонда содействия инновациям и компании BiTronics Lab</string>
    <string name="nav_ecg">Актичность сердца</string>
    <string name="nav_pulse">Пульс</string>
    <string name="nav_gsr">Сопротивление кожи</string>
    <string name="menuPulse">Пульс</string>
    <string name="menuGsr">Сопротивление кожи</string>
    <string name="menuEcg">Активность сердца</string>
    <string name="text_kol_vo_sokr">Количество сокращений мышц</string>
    <string name="string_about_trigger">Установите триггер (Условие, при наступлении которого происходит какое-либо действие)</string>
    <string name="value_sokr">Значение: 0</string>
    <string name="value_emg_sokr">Счетчик сокращения мышц</string>
    <string name="count_emg">Кол-во сокр. </string>
    <string name="set_music">Выбор мелодии</string>
    <string name="music_rain">Звук дождя</string>
    <string name="queen_bohemian_rhapsody">Queen - Bohemian Rhapsody</string>
    <string name="Lunnaya_sonata">Людвиг ван Бетховен - Лунная Соната</string>
    <string name="reset_kolvoEmg">Обнулить кол-во сокращений</string>
    <string name="pulse">Пульс:</string>
    <string name="rr">RR-интервал:</string>
    <string name="power">Мощность сигнала</string>
    <string name="v">V</string>
    <string name="Signal">Сырой сигнал</string>
    <string name="string_time">Время, c</string>
    <string name="u">U, В</string>
    <string name="Spectr">Спектр сигнала</string>
    <string name="string_lvl">Уровень</string>
    <string name="W">Частота, Гц</string>
    <string name="ebc">EBC (расчетный цикл дыхания):</string>
    <string name="timeOfReaction">Время восстановления:</string>
    <string name="PowerGSR">Мощность сигнала:</string>
    <string name="strEmg">Электромиограмма</string>
    <string name="P">P, отн. ед.</string>
    <string name="aboutEeg">Попробуйте расслабиться, чтобы заиграла музыка.</string>
    <string name="aboutPulseParams">Сравните параметры до и после физической нагрузки, и поймите как они изменяются.</string>
    <string name="AboutGSR">Узнайте свое время восстановления, после предьявления стимула.</string>
    <string name="SignalGSR">Кожно-гальваническая реакция</string>
    <string name="SignalFPG">Фотоплетизмограмма</string>
    <string name="SignalECG">Электрокардиограмма</string>
    <string name="SignalEEG">Электроэнцефалограмма</string>
    <string name="controlGouestions">Выберите интересующую вас активность</string>
    <string name="MuscleActivity">Мышечная активность</string>
    <string name="BrainActivity">Активность Мозга</string>
    <string name="SActivity">Активность сердца</string>
    <string name="GSRActivity">Сопротивление кожи</string>
    <string name="PulseActivity">Пульс</string>
    <string name="Kalibrate">Калибровка</string>
    <string name="StateText">Физиологическое состояние:</string>
    <string name="StressText">Стресс:</string>

</resources>