<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.featureControl.ControlFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/ControlScreen">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/ic_baseline_bluetooth_connected_24" />


        <TextView
            android:id="@+id/txtDevice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="20dp"
            android:text="@string/device"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDevice"
            android:layout_marginStart="100dp"
            android:text="@string/connected"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="18sp" />


    <Button
        android:id="@+id/btn_disconnect"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:text="@string/disconnect"
        android:textColor="#3A89FA" />


    <TextView
        android:id="@+id/tv1"
        android:layout_below="@+id/btn_disconnect"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:gravity="center|top"
        android:text="@string/controlGouestions"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#99000000"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonMuscle"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/tv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_muscle"
        android:text="@string/MuscleActivity"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3A89FA" />

    <Button
        android:id="@+id/buttonBrain"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonMuscle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/baseline_psychology_24"
        android:text="@string/BrainActivity"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3A89FA" />

    <Button
        android:id="@+id/buttonECG"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonBrain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/outline_favorite_24"
        android:text="@string/SActivity"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3A89FA" />

    <Button
        android:id="@+id/buttonKGR"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonECG"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/gesture_two_tap"
        android:text="@string/GSRActivity"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3A89FA" />

    <Button
        android:id="@+id/buttonPulse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/buttonKGR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/clipboard_pulse_outline"
        android:text="@string/PulseActivity"
        android:textColor="#FFFFFF"
        app:backgroundTint="#3A89FA" />

    </RelativeLayout>
    </RelativeLayout>