<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.featureEEG.EegFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/SignalEEG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/Signal"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/u"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />


        <com.jjoe64.graphview.GraphView
            android:id="@+id/EEG_graph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/SignalEEG" />

        <TextView
            android:id="@+id/Time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/EEG_graph"
            android:layout_centerHorizontal="true"
            android:text="@string/string_time"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtSpectr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Time"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Spectr"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Time"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/string_lvl"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/spectrEEGGraph"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_below="@+id/txtSpectr" />

        <TextView
            android:id="@+id/Gertz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spectrEEGGraph"
            android:layout_centerHorizontal="true"
            android:text="@string/W"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtTriggerEEG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Gertz"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:text="@string/string_about_trigger"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txtTrigEEG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTriggerEEG"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/value_sokr"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/SeekEEG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTrigEEG"
            android:layout_marginTop="24dp"
            android:max="100"
            />

        <TextView
            android:id="@+id/setMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/SeekEEG"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/set_music"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#99000000"
            android:textSize="14sp" />

        <RadioGroup
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setMusic"
            android:layout_marginTop="16dp"

            >

            <RadioButton
                android:id="@+id/Rain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_rain"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColorLink="@color/purple_500"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/BohemianRapsody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queen_bohemian_rhapsody"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColorLink="@color/purple_500"
                android:textSize="14sp" />

            <RadioButton
                android:id="@+id/Lunnaya_Sonata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Lunnaya_sonata"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColorLink="@color/purple_500"
                android:textSize="14sp" />
        </RadioGroup>
    </RelativeLayout>
</ScrollView>