<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.featureStart.HomeFragment"
    android:background="@drawable/background_home"
    >

    <TextView
        android:id="@+id/textAboutApplication"
        android:layout_width="270dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:gravity="center|top"
        android:text="@string/aboutApplication"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F2F2"
        android:textSize="14sp" />

    <Button
        android:id="@+id/buttonOnBluetooth"
        android:layout_width="300dp"
        android:layout_below="@+id/textAboutApplication"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_centerInParent="true"
        android:text="@string/onBluetooth"
        android:textColor="#388AFB"
        app:backgroundTint="@color/white" />

    <LinearLayout
        android:id="@+id/Email"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:layout_below="@+id/buttonOnBluetooth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:orientation="vertical"

        >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:gravity="center|top"
            android:text="@string/our_contacts"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#F2F2F2"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:autoLink="email"
            android:gravity="center|top"
            android:text="@string/string_email"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textColor="#F2F2F2"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center|top"
        android:text="@string/fondHelpInnovation"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F2F2"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:gravity="center|top"
        android:text="@string/fondHelpInnovation2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#F2F2F2"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:id="@+id/logo_fond"
        app:srcCompat="@drawable/logo_fond" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_below="@+id/logo_fond"
        app:srcCompat="@drawable/bitronicslab_logo_white" />

</RelativeLayout>